Prevent layout shifting on current reservation toggling

--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -14,6 +14,10 @@
   background-color: white;
 }
 
+.calendar.noCurrentReservation {
+  margin-bottom: 35px;
+}
+
 .reservation {
   background-color: rgb(57, 163, 255);
   width: 100%;
